web-infras/parser/tests/fixtures/babel/es2015/class-methods/disallow-computed-get-string/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,11)
2|  ["get"] a() {}
 |         ^
